# google-ads-scraper

./: README.md  google_ads_results_20241026_130438 (1).csv  google_ads_results_20241026_135117.csv  google_ads_scraper.py  pyproject.toml  requirements.txt
config/: scraper_config.yaml  targets.yaml
google_ads_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
results/: google_ads_results_20241026_130438.csv  google_ads_results_20241026_135117.csv
src/: __init__.py  config.py
src/models/: ad_data.py
src/utils/: performance_monitor.py  rate_limiter.py
tests/: test_config.py  test_scraper.py
